# cubic_bezier_splines_visualizer

./: CMakeLists.txt
targets/demo/: CMakeLists.txt
targets/demo/source/: main.c
targets/demo/source/splines/: basic.h  bounce.h
